更新UI界面，使用ttkbootstrap

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Cache directory for temporary files
 cache/
+userSetting.json
+*/__pycache__/
+
 
 # Output directory for generated files
 output/
